fix: fixed fcinfo cfg resolution